# tictactoe

./: README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: check_version.sh
tests/: test_core.py
tictactoe/: __init__.py  __main__.py  core.py  main.py
