[project]
name = "tictactoe"
version = "0.4.0"
requires-python = ">=3.9"
dependencies = ["pydantic"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["black", "pylint", "pytest"]

[tool.pylint.format]
max-line-length = 88

[tool.black]
line-length = 88
preview = true
